logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -107,7 +107,7 @@ header {
   width: 100%;
   padding: 0.5rem;
   margin:0rem;
-
+  height: 5rem;
 }
 
 /* 📱 Mobile Navbar */
